# aoc2023

./: .gitignore  makefile  pyproject.toml  test.py
day01/: test.py
src/: coordinates.py  day01.py  utils.py
src/day01/: day01.py
src/day02/: day02.py
src/day03/: day03.py
src/day04/: day04.py
src/day05/: day05.py
src/day06/: day06.py
src/day07/: day07.py
src/day08/: day08.py
src/day09/: day09.py
src/day10/: day10.py
src/day11/: day11.py
src/day12/: day12.py
src/day13/: day13.py
src/day14/: day14.py
src/day15/: day15.py
src/day16/: day16.py
src/day17/: day17.py
src/day18/: day18.py
src/day19/: day19.py  day19_part_one_alternate_solution.py
src/day20/: day20.py
src/day21/: day21.py  test.py
src/day22/: day22.py
src/day23/: day23.py
src/day24/: day24.py
src/day25/: day25.py
tests/: test_coordinates.py  test_day01.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day20.py  test_day21.py  test_day24.py  test_day_22.py  test_day_23.py
