[tool.poetry]
name = "aoc-2023"
version = "0.1.0"
description = "Rediscovering python through the mist of 🎄 december 🎄 !"
authors = ["Pierre-Guillaume Laurin"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydot = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"
isort = "^5.12.0"
pylint = "^3.0.2"

[tool.pytest.ini_options]
python_paths = ["src"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
